c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/initializers/non_constant_static_init.c
struct pair {
  int a;
  int b;
};
struct pair x = {1, 2};
// you can't initialize a static variable with a non-constant expression
struct pair y = x;